python/test-data/testTypesCollections2.err
Traceback (most recent call last):
  File "test-data/testTypesCollections2.py", line 10, in <module>
    foo([lambda: "1", lambda: 42]) # error because the 2nd functions returns an int
  File "test-data/testTypesCollections2.py", line 6, in foo
    res.append(f())
WyppTypeError: list is not a list[Callable[[], str]]
given:    [<function <lambda> at 0x00>, <function <lambda> at 0x00>]
expected: value of type list[Callable[[], str]]

context: foo(l: list[Callable[[], str]]) -> list[str]
                ^^^^^^^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesCollections2.py:3
caused by: test-data/testTypesCollections2.py:10
  | foo([lambda: "1", lambda: 42]) # error because the 2nd functions returns an int
